--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Advanced CSS - Assignment 1</title>
     <style>
 
-     #first-div p::after {content: " NEW "; color: yellow;} 
+     #first-div p::after {content: " -NEW "; color: yellow;} 
       
      #second-div p::after {content: none;}
      
